--- a/custom-addons/tour_booking/views/product_template_views.xml
+++ b/custom-addons/tour_booking/views/product_template_views.xml
@@ -5,7 +5,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='general_information']" position="inside">
+            <xpath expr="//page[@name='general_information']/group" position="inside">
                 <field name="es_tour"/>
             </xpath>
         </field>
