--- a/custom-addons/tour_booking/views/sale_order_views.xml
+++ b/custom-addons/tour_booking/views/sale_order_views.xml
@@ -3,7 +3,7 @@
     <record id="view_sale_order_line_form_inherit_tour" model="ir.ui.view">
         <field name="name">sale.order.line.form.inherit.tour</field>
         <field name="model">sale.order.line</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="inherit_id" ref="sale.view_order_line_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="fecha_reserva" attrs="{'invisible': [('product_id.es_tour', '=', False)]}"/>
