--- a/custom-addons/tour_booking/views/sale_order_views.xml
+++ b/custom-addons/tour_booking/views/sale_order_views.xml
@@ -3,11 +3,10 @@
     <record id="view_sale_order_line_form_inherit_tour" model="ir.ui.view">
         <field name="name">sale.order.line.form.inherit.tour</field>
         <field name="model">sale.order.line</field>
-        <!-- In Odoo 18 the sales order line form view moved to the
-             `sale_management` module.  The old `sale.view_order_line_form`
-             reference no longer exists which caused a failure during module
-             installation.  Use the new external identifier instead. -->
-        <field name="inherit_id" ref="sale_management.view_order_line_form"/>
+        <!-- In some Odoo versions the sales order line form view is provided
+             by the ``sale`` module.  Using the ``sale.view_order_line_form``
+             identifier works across editions. -->
+        <field name="inherit_id" ref="sale.view_order_line_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="fecha_reserva" attrs="{'invisible': [('product_id.es_tour', '=', False)]}"/>
